...
        android:id="@+id/textView_score"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorForText"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/down"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/up"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/response_list"
        android:layout_width="344dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
...
